fix wrong image alignment, del unecessary gallery images

--- a/src/_reset.scss
+++ b/src/_reset.scss
@@ -29,6 +29,13 @@ body {
 	}
 }
 
+img {
+	line-height: 0;
+	vertical-align: middle;
+	display: block;
+	-ms-interpolation-mode: bicubic;
+}
+
 .clr {
 	clear: both;
 }
